--- a/app/views/pages/projets.html.erb
+++ b/app/views/pages/projets.html.erb
@@ -1,4 +1,4 @@
-<div class="container repeat">
+<div class="container repeat projet-title">
   <h1 class="text-projet">
     <span class="text__first"><span class="text__word">conception, design, développement </span><span class="text__first-bg"></span></span>
     <br>
@@ -6,8 +6,9 @@
   </h1>
 </div>
 <div class="container">
-  <%= render 'shared/noa-animated-image' %>
+  <%= render 'shared/myplace-animated-image' %>
   <%= render 'shared/hplace-animated-image' %>
+  <%= render 'shared/noa-animated-image' %>
 </div>
 
 <div class="container">
