--- a/app/assets/stylesheets/components/_pretty-underline.scss
+++ b/app/assets/stylesheets/components/_pretty-underline.scss
@@ -1,32 +1,32 @@
-.subheading {
-  font-size: 1em;
-  line-height: 1.5;
-}
+// .subheading {
+//   font-size: 1em;
+//   line-height: 1.5;
+// }
 
-@media screen and (min-width: 40em) {
-  .subheading {
-    font-size: 1.75vw;
-  }
-}
+// @media screen and (min-width: 40em) {
+//   .subheading {
+//     font-size: 1.75vw;
+//   }
+// }
 
-/*================================================
-Start Important Part
-==================================================*/
+// /*================================================
+// Start Important Part
+// ==================================================*/
 
-.underline--magical {
-  background-image: linear-gradient(rgb(42, 245, 152) 0%, rgb(0, 66, 218) 100%);
-  background-repeat: no-repeat;
-  background-size: 100% 0.2em;
-  background-position: 0 88%;
-  transition: background-size 0.25s ease-in;
-  &:hover {
-    background-size: 100% 88%;
-  }
-}
+// .underline--magical {
+//   background-image: linear-gradient(rgb(42, 245, 152) 0%, rgb(0, 66, 218) 100%);
+//   background-repeat: no-repeat;
+//   background-size: 100% 0.2em;
+//   background-position: 0 88%;
+//   transition: background-size 0.25s ease-in;
+//   &:hover {
+//     background-size: 100% 88%;
+//   }
+// }
 
-/*================================================
-End Important Part
-==================================================*/
-//linear-gradient(to right, rgb(106, 17, 203) 0%, rgb(37, 117, 252) 100%);
-// rgb(0, 66, 218)
-//linear-gradient(rgb(0, 66, 218) 0%, rgb(0, 158, 253) 100%);
+// /*================================================
+// End Important Part
+// ==================================================*/
+// //linear-gradient(to right, rgb(106, 17, 203) 0%, rgb(37, 117, 252) 100%);
+// // rgb(0, 66, 218)
+// //linear-gradient(rgb(0, 66, 218) 0%, rgb(0, 158, 253) 100%);
