--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -111,9 +111,9 @@
 <div id="contact-content">
   <div class="container">
     <h2 id="contact-title" class="color-change" data-aos="fade-up">Contact</h2>
-    <h2 id="contact-mail"><a href="mailto:bonjour@leochaput.fr" class="color-change" data-aos="fade-up">bonjour@leochaput.fr</a></h2>
+    <h2 id="contact-mail"><a href="mailto:bonjour@leochaput.com" class="color-change" data-aos="fade-up">bonjour@leochaput.com</a></h2>
     <a href="https://www.linkedin.com/in/leo-chaput", target="blank"><i class="fab fa-linkedin contact-icon color-change"></i></a>
-    <a href="mailto:bonjour@leochaput.fr"><i class="far fa-envelope contact-icon color-change"></i></a>
+    <a href="mailto:bonjour@leochaput.com"><i class="far fa-envelope contact-icon color-change"></i></a>
   </div>
 </div>
 
