fix bug with navbar underline becauuse of wrong id

--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -23,9 +23,9 @@
   color: $dark-gray;
 }
 
-#about-title {
-  font-size: 2em;
-}
+// #about-title {
+//   font-size: 2em;
+// }
 
 #second-title {
   font-size: 2em;
