--- a/app/assets/stylesheets/pages/_projets.scss
+++ b/app/assets/stylesheets/pages/_projets.scss
@@ -36,15 +36,15 @@
   display: none;
 }
 
-#projet-title {
-  text-align: center;
-  color: black;
-  margin-bottom: 2em;
-  font-size: 2em;
-  width: 70%;
-  margin-left: 15%;
-  margin-right: 15%;
-}
+// #projet-title {
+//   text-align: center;
+//   color: black;
+//   margin-bottom: 2em;
+//   font-size: 2em;
+//   width: 70%;
+//   margin-left: 15%;
+//   margin-right: 15%;
+// }
 
 .project-name {
   text-align: center;
