--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -35,7 +35,7 @@
  -->
 <div class="container">
   <div class="container repeat">
-    <h1 class="text">
+    <h1 class="text" id="about-title">
       <span class="text__first"><span class="text__word">Pour un accompagnement de la conception... </span><span class="text__first-bg"></span></span>
       <br>
       <span class="text__second"><span class="text__word">... jusqu'à la mise en production !</span><span class="text__second-bg"></span></span>
