--- a/app/views/pages/projets.html.erb
+++ b/app/views/pages/projets.html.erb
@@ -1,5 +1,5 @@
 <div class="container repeat projet-title">
-  <h1 class="text-projet">
+  <h1 class="text-projet" id="projet-title">
     <span class="text__first"><span class="text__word">conception, design, développement </span><span class="text__first-bg"></span></span>
     <br>
     <span class="text__second"><span class="text__word">et production de votre site web</span><span class="text__second-bg"></span></span>
