creation of meta data

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,5 +10,8 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 $bordeaux: #0042da;
 $dark-gray: #353535;
+// $dark-gray: #E6E6E6;
 $p-gray: #333333;
+// $p-gray: #E6E6E6;
+// $background: #0A0A0A;
 $background: #FAFAFA;
