--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,10 +8,13 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
-$bordeaux: #0042da;
+$modern-blue: #0042da;
+$bordeaux: #BD3231;
 $dark-gray: #353535;
+$white: #FFFFFF;
 // $dark-gray: #E6E6E6;
 $p-gray: #333333;
 // $p-gray: #E6E6E6;
-// $background: #0A0A0A;
-$background: #FAFAFA;
+// $background-black: #232323;
+$background-black: #0A0A0A;
+$background-white: #FAFAFA;
