--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -35,7 +35,7 @@
  -->
 <div class="container">
   <div class="container repeat">
-    <h1 class="text" id="about-title">
+    <h1 class="text-contact" id="about-title">
       <span class="text__first"><span class="text__word">Pour un accompagnement de la conception... </span><span class="text__first-bg"></span></span>
       <br>
       <span class="text__second"><span class="text__word">... jusqu'à la mise en production !</span><span class="text__second-bg"></span></span>
@@ -46,7 +46,7 @@
     <h3>Créez votre site web en toute sérénité. Tout est mis en place pour que celui-ci soit une réussite.</h3>
   </div>
   <div class="container repeat">
-    <p class="text-projet">
+    <p class="text-projet-contact">
       <span class="text__first"><span class="text__word">Un design travaillé et responsive </span><span class="text__first-bg"></span></span>
       <br>
       <span class="text__second"><span class="text__word">sur tous les supports</span><span class="text__second-bg"></span></span>
