--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,14 @@
-<div class="container repeat">
-  <div>
-    <h1 id="title" data-aos="zoom-in">Léo Chaput</h1>
-    <h2 id="subhead" data-aos="zoom-in">Développeur web fullstack</h2>
+<div class="background-black-home">
+  <div class="container repeat">
+    <div>
+      <h1 id="title" data-aos="zoom-in">Léo Chaput</h1>
+      <h2 id="subhead" data-aos="zoom-in">Développeur web fullstack</h2>
+    </div>
+    <p class="text">
+      <span class="text__first"><span class="text__word">Conception et développement </span><span class="text__first-bg"></span></span>
+      <br>
+      <span class="text__second"><span class="text__word">de votre site web</span><span class="text__second-bg"></span></span>
+    </p>
   </div>
-  <p class="text">
-    <span class="text__first"><span class="text__word">Conception et développement </span><span class="text__first-bg"></span></span>
-    <br>
-    <span class="text__second"><span class="text__word">de votre site web</span><span class="text__second-bg"></span></span>
-  </p>
 </div>
 
