--- a/app/assets/stylesheets/components/_animated-image.scss
+++ b/app/assets/stylesheets/components/_animated-image.scss
@@ -4,11 +4,10 @@
   margin: 0px auto 10px;
   position: relative;
   overflow: hidden;
-  width: 70%;
   color: white;
   text-align: center;
   font-size: 16px;
-  background-color: $background;
+  background-color: $background-white;
   line-height: 1.5em;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
@@ -154,7 +153,7 @@
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .image-effect {
-    width: 70%;
+    width: 80%;
   }
   .image-effect i {
     position: absolute;
@@ -180,7 +179,7 @@
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
   .image-effect {
-    width: 70%;
+    width: 80%;
   }
   .image-effect i {
     position: absolute;
