--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,5 +10,10 @@
       <span class="text__second"><span class="text__word">de votre site web</span><span class="text__second-bg"></span></span>
     </p>
   </div>
+  <div class="container">
+    <div class="footer-home">
+      <a href="https://www.linkedin.com/in/leo-chaput", target="blank"><i class="fab fa-linkedin contact-icon-projet photo-link-zoom"></i></a>
+      <a href="mailto:bonjour@leochaput.com"><i class="far fa-envelope contact-icon-projet photo-link-zoom"></i></a>
+    </div>
+  </div>
 </div>
-
