responsivness bug fixed

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,45 +13,40 @@ h1, h2 {
 }
 
 .footer-home {
-  position: relative;
+  text-align: center;
 }
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
     .footer-home {
-      top: 12vh;
-      left: 50vw;
+      margin-top: 64px;
     }
   }
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
   .footer-home {
-    top: 10vh;
-    left: 50vw;
+    margin-top: 64px;
   }
 }
 
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
   .footer-home {
-    top: 25vh;
-    left: 50vw;
+    margin-top: 128px;
   }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .footer-home {
-    top: 20vh;
-    left: 50vw;
+    margin-top: 128px;
   }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
   .footer-home {
-    top: 20vh;
-    left: 50vw;
+    margin-top: 128px;
   }
 }
