change about project description with noa and hplace

--- a/app/views/shared/_hplace-animated-image.html.erb
+++ b/app/views/shared/_hplace-animated-image.html.erb
@@ -8,7 +8,7 @@
     <div id="imgtext" style="display:none;"></div>
   </div>
   <figcaption>
-    <h3>HPlace<span>A mobile application developed in 10 days during Le wagon bootcamp. Hplace is a social network for seriously ill people in order to organize, participate to event in their hospital. HPlace has for goal to improve the quality of life of ill people in hospital in order to fight aigainst loneliness. 🏩 💞</span></h3>
+    <h3>HPlace<span>Une application mobile développée en 10 jours pendant le bootcamp du Wagon à Paris. Hplace est un réseau social pour les personnes hospitalisées pendant une longue durée afin d'organiser ou de participer à des événements dans leur hôpital. HPlace a pour but d'améliorer la qualité de vie des personnes malades à l'hôpital afin de lutter contre la solitude.</span></h3>
   </figcaption>
   <i class="fas fa-plus"><a href="https://hplace.fun" target="blank"></a></i>
 </figure>
