--- a/app/views/shared/_noa-animated-image.html.erb
+++ b/app/views/shared/_noa-animated-image.html.erb
@@ -8,7 +8,7 @@
     <div id="imgtext" style="display:none;"></div>
   </div>
   <figcaption>
-    <h3>Noa<span>A clone of AIR BNB developed in 5 days during the wagon bootcamp. Noa is an application to rent pets all around the world 🐶 🐱.</span></h3>
+    <h3>Noa<span>Un clone d'AIR BNB développé en 5 jours pendant le bootcamp du Wagon à Paris. Noa est une application permettant de louer des animaux de compagnie dans le monde entier.</span></h3>
   </figcaption>
   <i class="fas fa-plus"><a href="https://noa321.herokuapp.com/" target="blank"></a></i>
 </figure>
