--- a/app/views/shared/_preloader.html.erb
+++ b/app/views/shared/_preloader.html.erb
@@ -28,3 +28,32 @@
   </svg>
 </div>
 
+<script>
+  function noScroll() {
+    window.scrollTo(0, 0);
+  }
+
+  var preloader = () => {
+    window.addEventListener('load', () => {
+      window.addEventListener('scroll', noScroll);
+      var preload = document.querySelector('.preloader');
+      if (document.getElementById('about-title')) {
+        preload.style.backgroundColor= "#FAFAFA"
+      // var op = 1;  // initial opacity
+      // var timer = setInterval(function () {
+      //     if (op <= 0.1){
+      //         clearInterval(timer);
+      //         preload.style.display = 'none';
+      //     }
+      //     preload.style.opacity = op;
+      //     preload.style.filter = 'alpha(opacity=' + op * 100 + ")";
+      //     op -= op * 0.1;
+      // }, 50);
+      };
+      preload.style.display = "none";
+      window.removeEventListener('scroll', noScroll);
+    });
+  }
+
+  preloader();
+</script>
