--- a/app/views/shared/_preloader.html.erb
+++ b/app/views/shared/_preloader.html.erb
@@ -2,7 +2,7 @@
   <div class="loader">Loading...</div>
 </div>
 
-<script>
+<!-- <script>
   var noScrollFunction = function noScroll() {
     window.scrollTo(0, 0);
   }
@@ -31,3 +31,4 @@
 
   preloader();
 </script>
+ -->
