--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,9 @@
 body {
   background-color: $background-white;
   overflow-x: hidden;
+  height: 100%;
   overflow: hidden;
+  position: fixed;
 }
 
 h1, h2 {
