changes on images, mockup and my place portfolio

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -54,7 +54,7 @@
       </p>
     </div>
     <a class="photo-link-zoom">
-      <div class="photo-responsive" data-aos="fade-up" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path 'test-responsive.png' %>);">
+      <div class="photo-responsive" data-aos="fade-up" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path 'mockup2.png' %>);">
       </div>
     </a>
 
