--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -33,6 +33,8 @@
     </div>
 
  -->
+<% content_for(:loader_class, "loader-contact") %>
+
 <div class="full-height-about">
   <div class="container">
     <div class="container repeat">
